# swingsage

./: .env.example  .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml  requirements-base.txt  requirements-dev-mac.txt  requirements-prod-windows-fallback.txt  requirements-prod-windows.txt
analytics/: __init__.py  auto_trim.py  joint_angles.py
capture/: __init__.py  config.py  vtrack_openconnect.py  vtrack_watcher.py
coach/: __init__.py  llm.py
data/: schema.sql
docs/: phase1.md
inference/: __init__.py  pose_3d.py  swing_events.py  video_io.py  visualization.py
scripts/: analyze_swing.py  generate_sample_video.py  install_desktop_shortcut.ps1  setup_mac.sh  setup_windows.ps1  start_swingsage.ps1
server/: README.md  main.py
tests/: conftest.py  test_imports.py  test_schema.py  test_vtrack_openconnect.py  test_vtrack_watcher.py
tests/fixtures/: README.md
tests/fixtures/vtrack_shots/: shot_001.json  shot_002.json  shot_003.json  shot_004_minimal.json
ui/: __init__.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Brand.tsx  BridgeStatusChip.tsx  HistoryView.tsx  ProcessingView.tsx  ResultsView.tsx  UploadView.tsx
web/src/lib/: api.ts  types.ts
